# FlySeek

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
configs/: adversarial_agent.yaml  benchmark.yaml  gs_chase_env_gs_ommo_urban.yaml  gs_chase_env_gs_urban_dense.yaml  instruction_templates.yaml  llm_backend.yaml  target_init_env_airsim_16.yaml
flyseek/: __init__.py
flyseek_bench/: __init__.py  export.py  instruction_generator.py  metrics.py  run_generate_episodes.py  schema.py  target_policy.py  validate_episode.py  visibility.py
scripts/: annotate_gs_target.py  demo_adversary_chase.py  demo_alley_chase.py  demo_building_chase.py  demo_chase_pair.py  demo_hide_and_seek.py  demo_ue_compare.py  demo_unrealcv_chase.py  detect_cars_pcd.py  diagnose_airsim.py  gen_gs_chase_geometry.py  gen_instructions.py  gs_ground_field.py  gs_navmap.py  list_initializable_targets.py  probe_airsim_assets.py  probe_unrealcv_objects.py  replay_trajectory.py  run_hide_seek_batch.py  scout_scene_targets.py  smoke_test_teleport_and_capture.py  verify_gs_occupancy.py  verify_unrealcv_moving_car.py  viz_chase_compare.py
shell/: demo.sh  demo_gs_ommo_urban.sh  setup_gs_ommo_urban.sh  start_airsim.sh  ue5.sh
tests/: __init__.py  run_tests_stdlib.py  test_adaptive_tracker.py  test_adversary_medium.py  test_alley_route.py  test_behavior_analyzer.py  test_bench_metrics.py  test_bench_schema.py  test_bench_visibility.py  test_eval_metrics.py  test_expert_trajectory.py  test_ground_constraints.py  test_hide_seek.py  test_hide_visibility.py  test_instruction_blacklist.py  test_instruction_generator.py  test_occlusion_route.py  test_pcd_occupancy.py  test_protocol_codec.py  (+8 more)
(+64 files in other folders)
