[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flyseek-extend"
version = "0.1.0"
description = "FlySeek-Bench: Adversarial dynamic-target benchmark generation, an incremental extension to OpenFly-Platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "JoshuaWen" }
]
keywords = ["aerial-tracking", "visual-language-tracking", "adversarial", "openfly", "airsim", "benchmark"]

dependencies = [
    "numpy>=1.21,<2.0",
    "scipy>=1.7",
    "PyYAML>=6.0",
    "Pillow>=9.0",
    "opencv-python>=4.5",
    "tqdm>=4.62",
    "python-dotenv>=1.0",
    # AirSim Python client (already in OpenFly's requirements.txt)
    "airsim",
    "msgpack-rpc-python",
]

[project.optional-dependencies]
# 本地 VLM 后端（4090 推荐）
llm-local = [
    "vllm>=0.6.0",
    "transformers>=4.45",
    "torch>=2.1",
    "qwen-vl-utils",
]
# 远程 API 后端
llm-api = [
    "openai>=1.0",
    "anthropic>=0.34",
    "aiohttp>=3.8",
    "aiofiles>=23.0",
]
# 指令质量评分
quality = [
    "sentence-transformers>=2.7",
]
# 开发依赖
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
flyseek-bench = "flyseek.pipeline.cli:main"
flyseek-eval = "flyseek.eval.cli:main"
flyseek-probe-assets = "flyseek.scripts_entry:probe_assets_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flyseek*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
